fix text alignment

--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -125,9 +125,9 @@
   flex-direction: column;
 }
 
-.form__toggle {
+/* .form__toggle {
   direction: ltr;
-}
+} */
 
 .form__print-container {
   text-align: center;
